// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert and delete text: delete 1`] = `
"Editor (1.0:0 -> 1.0:0)
├── ?
│   └── (empty)
├── Text
│   └── (empty)
├── Heading1
│   └── (empty)
├── Heading4
│   └── (empty)
├── Button
│   └── (empty)
└── Link
    └── (empty)"
`;

exports[`insert and delete text: final 1`] = `
"Editor (0.0:0 -> 0.0:0)
├── ?
│   └── (empty)
├── Text
│   └── (empty)
├── Heading1
│   └── (empty)
├── Heading4
│   └── (empty)
├── Button
│   └── (empty)
└── Link
    └── (empty)"
`;

exports[`insert and delete text: initial 1`] = `
"Editor (1.0:0 -> 1.0:0)
├── ?
│   └── (empty)
├── Text
│   └── (empty)
├── Heading1
│   └── (empty)
├── Heading4
│   └── (empty)
├── Button
│   └── (empty)
└── Link
    └── (empty)"
`;

exports[`insert and delete text: with hi 1`] = `
"Editor (1.0:2 -> 1.0:2)
├── ?
│   └── (empty)
├── Text
│   └── hi
├── Heading1
│   └── (empty)
├── Heading4
│   └── (empty)
├── Button
│   └── (empty)
└── Link
    └── (empty)"
`;
